--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -12,10 +12,10 @@ body {
 
 .container {
   display: block;
-  position: fixed;
+  position: relative;
   width: 100vw;
   height: 100vh;
-  overflow: visible; }
+  overflow: hidden; }
 
 .slick {
   display: block;
@@ -39,7 +39,7 @@ body {
 .video,
 .picture {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   min-width: 100vw;
@@ -62,7 +62,7 @@ body {
   display: block; }
 
 .track {
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 15px;
   height: calc(100vh - 30px);
@@ -86,9 +86,9 @@ body {
     margin-top: -15px; }
 
 .circle-time {
-  position: fixed;
+  position: absolute;
   display: block;
-  top: 15px;
+  top: 0;
   right: 15px;
   margin-top: -5px;
   z-index: 2;
@@ -98,9 +98,9 @@ body {
   background-color: blue; }
 
 .circle-scroll {
-  position: fixed;
+  position: absolute;
   display: block;
-  top: 15px;
+  top: 0;
   right: 15px;
   margin-top: -5px;
   z-index: 2;
@@ -128,3 +128,18 @@ body {
 .content {
   display: block;
   height: 3200vh; }
+
+footer {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden; }
