--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,10 +14,10 @@ body {
 
 .container {
 	display: block;
-	position: fixed;
+	position: relative;
 	width: 100vw;
 	height: 100vh;
-	overflow: visible;
+	overflow: hidden;
 }
 
 .slick {
@@ -38,7 +38,7 @@ body {
 .video,
 .picture {
 	display: none;
-	position: fixed;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	min-width: 100vw;
@@ -62,7 +62,7 @@ body {
 }
 
 .track {
-	position: fixed;
+	position: absolute;
 	right: 0;
 	top: 15px;
 	height: calc(100vh - 30px);
@@ -90,9 +90,9 @@ body {
 }
 
 .circle-time {
-	position: fixed;
+	position: absolute;
 	display: block;
-	top: 15px;
+	top: 0;
 	right: 15px;
 	margin-top: -5px;
 	z-index: 2;
@@ -103,9 +103,9 @@ body {
 }
 
 .circle-scroll {
-	position: fixed;
+	position: absolute;
 	display: block;
-	top: 15px;
+	top: 0;
 	right: 15px;
 	margin-top: -5px;
 	z-index: 2;
@@ -135,4 +135,14 @@ body {
 .content {
 	display: block;
 	height: 3200vh;
+}
+
+footer {
+	position: relative;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
 }
