--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,14 +1,60 @@
+@-webkit-keyframes enterBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0); } }
+
+@keyframes enterBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0); } }
+
+@-webkit-keyframes exitingTop {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0); }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%); } }
+
+@keyframes exitingTop {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0); }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%); } }
+
 html,
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  cursor: pointer;
   background: #1e1e1e;
   color: #d4d4d4;
-  font-family: Courier New, Courier, monospace;
-  font-size: 12px;
-  cursor: pointer; }
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
+  letter-spacing: 2px;
+  line-height: 1.6; }
+
+.page {
+  width: 100vw;
+  height: 100vh; }
 
 .container {
   display: block;
@@ -16,6 +62,186 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden; }
+
+.captions {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  /*
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	*/ }
+
+.captions-item {
+  display: block;
+  position: absolute;
+  padding: 10vw;
+  width: calc(100% - 20vw);
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  pointer-events: none;
+  opacity: 0;
+  -webkit-transition: all ease-in-out 350ms;
+  transition: all ease-in-out 350ms; }
+  .captions-item > div {
+    -webkit-transform: translateY(0);
+            transform: translateY(0); }
+  .captions-item .index {
+    text-transform: uppercase; }
+  .captions-item .title {
+    font-size: 70px;
+    font-weight: 700;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase; }
+  .captions-item .description {
+    text-transform: uppercase;
+    max-width: 390px; }
+  .captions-item.entering {
+    pointer-events: all;
+    opacity: 1; }
+    .captions-item.entering > div {
+      -webkit-animation: enterBottom ease-in-out 350ms;
+              animation: enterBottom ease-in-out 350ms;
+      -webkit-animation-iteration-count: 1;
+              animation-iteration-count: 1;
+      -webkit-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards; }
+    .captions-item.entering > div:nth-of-type(1) {
+      -webkit-animation-delay: 50ms;
+      animation-delay: 50ms; }
+    .captions-item.entering > div:nth-of-type(2) {
+      -webkit-animation-delay: 100ms;
+      animation-delay: 100ms; }
+    .captions-item.entering > div:nth-of-type(3) {
+      -webkit-animation-delay: 150ms;
+      animation-delay: 150ms; }
+    .captions-item.entering > div:nth-of-type(4) {
+      -webkit-animation-delay: 200ms;
+      animation-delay: 200ms; }
+    .captions-item.entering > div:nth-of-type(5) {
+      -webkit-animation-delay: 250ms;
+      animation-delay: 250ms; }
+    .captions-item.entering > div:nth-of-type(6) {
+      -webkit-animation-delay: 300ms;
+      animation-delay: 300ms; }
+    .captions-item.entering > div:nth-of-type(7) {
+      -webkit-animation-delay: 350ms;
+      animation-delay: 350ms; }
+    .captions-item.entering > div:nth-of-type(8) {
+      -webkit-animation-delay: 400ms;
+      animation-delay: 400ms; }
+    .captions-item.entering > div:nth-of-type(9) {
+      -webkit-animation-delay: 450ms;
+      animation-delay: 450ms; }
+    .captions-item.entering > div:nth-of-type(10) {
+      -webkit-animation-delay: 500ms;
+      animation-delay: 500ms; }
+    .captions-item.entering > div:nth-of-type(11) {
+      -webkit-animation-delay: 550ms;
+      animation-delay: 550ms; }
+    .captions-item.entering > div:nth-of-type(12) {
+      -webkit-animation-delay: 600ms;
+      animation-delay: 600ms; }
+    .captions-item.entering > div:nth-of-type(13) {
+      -webkit-animation-delay: 650ms;
+      animation-delay: 650ms; }
+    .captions-item.entering > div:nth-of-type(14) {
+      -webkit-animation-delay: 700ms;
+      animation-delay: 700ms; }
+    .captions-item.entering > div:nth-of-type(15) {
+      -webkit-animation-delay: 750ms;
+      animation-delay: 750ms; }
+    .captions-item.entering > div:nth-of-type(16) {
+      -webkit-animation-delay: 800ms;
+      animation-delay: 800ms; }
+    .captions-item.entering > div:nth-of-type(17) {
+      -webkit-animation-delay: 850ms;
+      animation-delay: 850ms; }
+    .captions-item.entering > div:nth-of-type(18) {
+      -webkit-animation-delay: 900ms;
+      animation-delay: 900ms; }
+    .captions-item.entering > div:nth-of-type(19) {
+      -webkit-animation-delay: 950ms;
+      animation-delay: 950ms; }
+    .captions-item.entering > div:nth-of-type(20) {
+      -webkit-animation-delay: 1000ms;
+      animation-delay: 1000ms; }
+  .captions-item.exiting {
+    opacity: 0; }
+    .captions-item.exiting > div {
+      -webkit-animation: exitingTop ease-in-out 350ms;
+              animation: exitingTop ease-in-out 350ms;
+      -webkit-animation-iteration-count: 1;
+              animation-iteration-count: 1;
+      -webkit-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards; }
+    .captions-item.exiting > div:nth-of-type(1) {
+      -webkit-animation-delay: 50ms;
+      animation-delay: 50ms; }
+    .captions-item.exiting > div:nth-of-type(2) {
+      -webkit-animation-delay: 100ms;
+      animation-delay: 100ms; }
+    .captions-item.exiting > div:nth-of-type(3) {
+      -webkit-animation-delay: 150ms;
+      animation-delay: 150ms; }
+    .captions-item.exiting > div:nth-of-type(4) {
+      -webkit-animation-delay: 200ms;
+      animation-delay: 200ms; }
+    .captions-item.exiting > div:nth-of-type(5) {
+      -webkit-animation-delay: 250ms;
+      animation-delay: 250ms; }
+    .captions-item.exiting > div:nth-of-type(6) {
+      -webkit-animation-delay: 300ms;
+      animation-delay: 300ms; }
+    .captions-item.exiting > div:nth-of-type(7) {
+      -webkit-animation-delay: 350ms;
+      animation-delay: 350ms; }
+    .captions-item.exiting > div:nth-of-type(8) {
+      -webkit-animation-delay: 400ms;
+      animation-delay: 400ms; }
+    .captions-item.exiting > div:nth-of-type(9) {
+      -webkit-animation-delay: 450ms;
+      animation-delay: 450ms; }
+    .captions-item.exiting > div:nth-of-type(10) {
+      -webkit-animation-delay: 500ms;
+      animation-delay: 500ms; }
+    .captions-item.exiting > div:nth-of-type(11) {
+      -webkit-animation-delay: 550ms;
+      animation-delay: 550ms; }
+    .captions-item.exiting > div:nth-of-type(12) {
+      -webkit-animation-delay: 600ms;
+      animation-delay: 600ms; }
+    .captions-item.exiting > div:nth-of-type(13) {
+      -webkit-animation-delay: 650ms;
+      animation-delay: 650ms; }
+    .captions-item.exiting > div:nth-of-type(14) {
+      -webkit-animation-delay: 700ms;
+      animation-delay: 700ms; }
+    .captions-item.exiting > div:nth-of-type(15) {
+      -webkit-animation-delay: 750ms;
+      animation-delay: 750ms; }
+    .captions-item.exiting > div:nth-of-type(16) {
+      -webkit-animation-delay: 800ms;
+      animation-delay: 800ms; }
+    .captions-item.exiting > div:nth-of-type(17) {
+      -webkit-animation-delay: 850ms;
+      animation-delay: 850ms; }
+    .captions-item.exiting > div:nth-of-type(18) {
+      -webkit-animation-delay: 900ms;
+      animation-delay: 900ms; }
+    .captions-item.exiting > div:nth-of-type(19) {
+      -webkit-animation-delay: 950ms;
+      animation-delay: 950ms; }
+    .captions-item.exiting > div:nth-of-type(20) {
+      -webkit-animation-delay: 1000ms;
+      animation-delay: 1000ms; }
 
 .slick {
   display: block;
@@ -85,7 +311,7 @@ body {
     top: 0;
     margin-top: -15px; }
 
-.circle-time {
+.player-time {
   position: absolute;
   display: block;
   top: 0;
@@ -97,7 +323,7 @@ body {
   border-radius: 10px;
   background-color: blue; }
 
-.circle-scroll {
+.marker-time {
   position: absolute;
   display: block;
   top: 0;
