--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,15 +1,23 @@
-@import "services/vars";
+@import "components/vars";
+@import "components/mixins";
 html,
 body {
 	width: 100%;
 	height: 100%; // overflow: hidden;
 	margin: 0;
 	padding: 0;
+	cursor: pointer;
 	background: $background;
 	color: $text;
-	font-family: Courier New, Courier, monospace;
-	font-size: 12px;
-	cursor: pointer;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 17px;
+	letter-spacing: 2px;
+	line-height: 1.6;
+}
+
+.page {
+	width: 100vw;
+	height: 100vh;
 }
 
 .container {
@@ -18,6 +26,61 @@ body {
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
+}
+
+.captions {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	/*
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	*/
+}
+
+.captions-item {
+	display: block;
+	position: absolute;
+	padding: 10vw;
+	width: calc(100% - 20vw);
+	top: 50%;
+	transform: translateY(-50%);
+	pointer-events: none;
+	opacity: 0;
+	transition: all ease-in-out 350ms;
+	&>div {
+		transform: translateY(0);
+	}
+	.index {
+		text-transform: uppercase;
+	}
+	.title {
+		font-size: 70px;
+		font-weight: 700;
+		font-family: 'Oswald', sans-serif;
+		text-transform: uppercase;
+	}
+	.description {
+		text-transform: uppercase;
+		max-width: 390px;
+	}
+	&.entering {
+		pointer-events: all;
+		opacity: 1;
+		&>div {
+			@include enterBottom();
+		}
+		@include stagger('& > div');
+	}
+	&.exiting {
+		opacity: 0;
+		&>div {
+			@include exitingTop();
+		}
+		@include stagger('& > div');
+	}
 }
 
 .slick {
@@ -89,7 +152,7 @@ body {
 	cursor: pointer;
 }
 
-.circle-time {
+.player-time {
 	position: absolute;
 	display: block;
 	top: 0;
@@ -102,7 +165,7 @@ body {
 	background-color: blue;
 }
 
-.circle-scroll {
+.marker-time {
 	position: absolute;
 	display: block;
 	top: 0;
