--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -56,6 +56,21 @@ body {
   width: 100vw;
   height: 100vh; }
 
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  position: relative;
+  width: 100vw;
+  height: 100vh; }
+
 .container {
   display: block;
   position: relative;
@@ -64,9 +79,10 @@ body {
   overflow: hidden; }
 
 .captions {
+  display: block;
+  position: relative;
   width: 100%;
   height: 100%;
-  position: relative;
   /*
 	display: flex;
 	justify-content: center;
@@ -243,33 +259,14 @@ body {
       -webkit-animation-delay: 1000ms;
       animation-delay: 1000ms; }
 
-.slick {
-  display: block;
-  width: 100vw;
-  height: 100vh; }
-  .slick .slick-content {
-    width: 100vw;
-    height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    font-size: 70px;
-    border-bottom: 5px solid white; }
-
 .video,
 .picture {
   display: none;
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 100vw;
-  min-height: 100vh;
+  min-width: 100%;
+  min-height: 100%;
   background: white;
   pointer-events: none;
   opacity: 1;
@@ -291,7 +288,7 @@ body {
   position: absolute;
   right: 0;
   top: 15px;
-  height: calc(100vh - 30px);
+  height: calc(100% - 30px);
   width: 40px;
   background: rgba(128, 128, 128, 0.2); }
   .loading .track {
@@ -354,18 +351,3 @@ body {
 .content {
   display: block;
   height: 3200vh; }
-
-footer {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  overflow: hidden; }
