--- a/docs/fonts/fonts.css
+++ b/docs/fonts/fonts.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 @font-face {
   font-family: "campagnolo12speed";
-  src: url("/fonts/fonts/campagnolo12speed.eot");
-  src: url("/fonts/fonts/campagnolo12speed.eot?#iefix") format("embedded-opentype"), url("/fonts/fonts/campagnolo12speed.woff") format("woff"), url("/fonts/fonts/campagnolo12speed.ttf") format("truetype"), url("/fonts/fonts/campagnolo12speed.svg#campagnolo12speed") format("svg");
+  src: url("./../fonts/fonts/campagnolo12speed.eot");
+  src: url("./../fonts/fonts/campagnolo12speed.eot?#iefix") format("embedded-opentype"), url("./../fonts/fonts/campagnolo12speed.woff") format("woff"), url("./../fonts/fonts/campagnolo12speed.ttf") format("truetype"), url("./../fonts/fonts/campagnolo12speed.svg#campagnolo12speed") format("svg");
   font-weight: normal;
   font-style: normal;
 }
