--- a/docs/fonts/fonts.css
+++ b/docs/fonts/fonts.css
@@ -56,3 +56,11 @@
 .icon-websolute:before {
   content: "\65";
 }
+
+.icon-check:before {
+  content: "\67";
+}
+
+.icon-arrow-down:before {
+  content: "\68";
+}
