--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -207,21 +207,25 @@ button,
 
 .btn-more {
   border-radius: 4px;
-  background: #c02a1b;
-  color: #ffffff;
   text-transform: uppercase;
   margin: 15px 15px;
   padding: 5px 13px;
   letter-spacing: 1px;
   font-size: 12px;
   line-height: 20px;
-  border-radius: 3px; }
+  border-radius: 3px;
+  background: #c02a1b;
+  color: #ffffff; }
+  .btn-more:hover, .btn-more.active {
+    background: #ffffff;
+    color: #c02a1b; }
 
 .btn-marker {
   display: block;
   position: relative;
   overflow: hidden;
-  color: #28292b; }
+  color: #28292b;
+  white-space: nowrap; }
   .btn-marker .title,
   .btn-marker .num {
     display: block;
@@ -244,6 +248,70 @@ button,
             transform: translateX(110%); }
   .btn-marker:hover, .btn-marker.active {
     color: #c02a1b; }
+
+.btn-spec {
+  text-transform: uppercase;
+  line-height: 20px;
+  margin: 0 15px;
+  padding: 15px 15px;
+  border-radius: 5px;
+  letter-spacing: 3px;
+  background: #28292b; }
+  .btn-spec:hover, .btn-spec.active {
+    background: #3b3c3f; }
+  .btn-spec:hover {
+    -webkit-box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.25); }
+  .btn-spec .model {
+    color: #c02a1b; }
+
+.btn-download {
+  text-transform: uppercase;
+  line-height: 20px;
+  margin: 0 15px;
+  padding: 15px 45px;
+  border-radius: 3px;
+  border: 2px solid #ffffff;
+  letter-spacing: 3px;
+  background: transparent;
+  color: #ffffff; }
+  .btn-download:hover, .btn-download.active {
+    background: #ffffff;
+    color: #28292b; }
+
+.btn-submit {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0 15px;
+  padding: 15px 45px;
+  border-radius: 3px;
+  border: 2px solid #c02a1b;
+  letter-spacing: 3px;
+  background: transparent;
+  color: #c02a1b; }
+  .btn-submit:hover, .btn-submit.active {
+    background: #ffffff;
+    color: #c02a1b; }
+
+.btn-link {
+  position: relative; }
+  .btn-link:before {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    bottom: -2px;
+    background: #aaabb1;
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+    -webkit-transition: all ease-in-out 250ms;
+    transition: all ease-in-out 250ms; }
+  .btn-link:hover:before, .btn-link.active:before {
+    -webkit-transform: scale(0, 1);
+            transform: scale(0, 1); }
 
 [data-reveal] {
   position: relative;
@@ -341,7 +409,22 @@ svg {
 	max-width: 100%;
 }
 */
+.nav {
+  display: block;
+  position: relative;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: 400; }
+
 .markers {
+  position: absolute;
+  width: auto;
+  height: 100%;
+  right: 80px; }
+  .markers .track {
+    z-index: 3; }
+
+.nav-markers {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -358,7 +441,8 @@ svg {
           align-items: flex-end;
   width: auto;
   height: 100%;
-  right: 80px;
+  right: 0;
+  top: 0;
   list-style: none;
   text-align: right;
   text-transform: uppercase;
@@ -369,13 +453,46 @@ svg {
   pointer-events: none;
   -webkit-transition: opacity ease-in-out 350ms;
   transition: opacity ease-in-out 350ms; }
-  .markers li {
+  .nav-markers li {
     line-height: 60px;
     font-size: 16px;
-    letter-spacing: 2px; }
-  .loaded .markers {
+    letter-spacing: 3px; }
+  .loaded .nav-markers {
     opacity: 1;
     pointer-events: all; }
+
+.track {
+  position: absolute;
+  height: 540px;
+  width: 20px;
+  top: 50%;
+  margin-top: -270px;
+  right: -20px;
+  opacity: 0; }
+  .loaded .track {
+    opacity: 1; }
+
+.player-time {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  width: 2px;
+  height: 20px;
+  border-radius: 2px;
+  background-color: #c02a1b; }
+
+.marker-time {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  width: 2px;
+  height: 20px;
+  border-radius: 2px;
+  background-color: rgba(192, 42, 27, 0.1); }
 
 .preload {
   display: block;
@@ -500,6 +617,37 @@ body {
 .red {
   color: #c02a1b; }
 
+h2 {
+  font-size: 60px;
+  line-height: 60px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin: 0 0 20px 0; }
+
+h3 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin: 0 0 20px 0; }
+
+h4 {
+  font-size: 24px;
+  font-weight: 400px;
+  line-height: 36px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin: 0 0 20px 0; }
+
+h5 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin: 0 0 20px 0; }
+
 header {
   position: fixed;
   width: 100vw;
@@ -512,13 +660,6 @@ header {
   .campagnolo > img,
   .campagnolo > svg {
     width: 245px; }
-
-.nav {
-  display: block;
-  position: relative;
-  width: 100%;
-  text-transform: uppercase;
-  font-weight: 400; }
 
 .nav-main {
   margin-top: 60px;
@@ -538,6 +679,7 @@ header {
   color: #ffffff;
   overflow: hidden;
   pointer-events: none;
+  border-bottom: 1px solid #0f1011;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
   -webkit-transition: all 350ms ease-in-out;
@@ -574,7 +716,13 @@ footer {
   overflow: hidden;
   position: relative;
   width: 100vw;
-  min-height: 160px; }
+  min-height: 80px;
+  color: #aaabb1;
+  border-top: 1px solid #aaabb1; }
+
+.nav-footer {
+  text-transform: none;
+  font-weight: 300; }
 
 .section-overview {
   display: block;
@@ -596,8 +744,6 @@ footer {
 			transition: transform ease-in-out 2s;
 		}
         */ }
-  .section-overview .track {
-    z-index: 3; }
   .section-overview .overview-selection {
     z-index: 4; }
 
@@ -628,14 +774,14 @@ footer {
     font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     margin-top: -10px; }
   .overview-selection h6 {
     text-transform: uppercase;
     font-size: 12px;
     color: #c02a1b;
     font-weight: 600;
-    letter-spacing: 2px; }
+    letter-spacing: 3px; }
   .loaded .overview-selection {
     opacity: 0;
     pointer-events: none; }
@@ -941,17 +1087,6 @@ footer {
     opacity: 0;
     pointer-events: none; }
 
-.track {
-  position: absolute;
-  right: 0;
-  top: 15px;
-  height: calc(100% - 30px);
-  width: 40px;
-  background: rgba(128, 128, 128, 0.2);
-  opacity: 0; }
-  .loaded .track {
-    opacity: 1; }
-
 .step {
   position: absolute;
   width: 100%;
@@ -966,30 +1101,6 @@ footer {
     top: 0;
     margin-top: -15px; }
 
-.player-time {
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 15px;
-  margin-top: -5px;
-  z-index: 2;
-  width: 10px;
-  height: 10px;
-  border-radius: 10px;
-  background-color: #c02a1b; }
-
-.marker-time {
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 15px;
-  margin-top: -5px;
-  z-index: 2;
-  width: 10px;
-  height: 10px;
-  border-radius: 10px;
-  background-color: #ffffff; }
-
 .section-overview a {
   -ms-user-select: none;
       user-select: none;
@@ -1001,28 +1112,269 @@ footer {
 .section-overview img {
   pointer-events: none; }
 
-.model-and-specs,
-.learn-more {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.model-and-specs {
+  display: block;
+  position: relative;
   overflow: hidden;
+  width: 100vw;
+  min-height: 100vh;
+  padding: 165px 0;
+  background: #28292b;
+  color: #ffffff;
+  text-align: center; }
+  .model-and-specs h2 {
+    margin-bottom: 30px; }
+  .model-and-specs h3 {
+    margin-bottom: 120px; }
+  .model-and-specs h5 {
+    margin-bottom: 40px; }
+  .model-and-specs .tab-menu {
+    margin-bottom: 130px; }
+  .model-and-specs .flex-table {
+    margin-bottom: 40px; }
+  @media (max-width: 1199.98px) {
+    .model-and-specs .grid-container-2 {
+      grid-template-columns: auto; } }
+  .model-and-specs .picture img {
+    max-width: 100%; }
+  .model-and-specs .super-record img {
+    max-width: 100%; }
+
+.flex-table .flex-row {
+  padding: 20px 0 10px 0; }
+
+.flex-table .flex {
+  text-align: left;
+  font-size: 16px;
+  line-height: 18px;
+  letter-spacing: 1px;
+  font-weight: 300;
+  padding: 0 10px; }
+
+.flex-table .value {
+  display: inline-block;
+  min-width: 60px; }
+
+.flex-table .small {
+  font-size: 11px;
+  color: #888889; }
+
+.flex-table .flex-row + .flex-row {
+  border-top: 1px solid #6f7075; }
+
+.flex-table .flex-head + .flex-row {
+  border-top: 0; }
+
+.flex-table .flex-row + .flex-foot {
+  border-top: 0; }
+
+@media (max-width: 767.98px) {
+  .flex-table .flex-col-2 {
+    display: none; } }
+
+.flex-head .flex,
+.flex-foot .flex {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 18px; }
+
+.learn-more {
+  display: block;
   position: relative;
   width: 100vw;
-  min-height: 100vh; }
-
-.model-and-specs {
-  background: #28292b;
-  color: #ffffff; }
-
-.learn-more {
+  min-height: 100vh;
+  padding: 165px 0;
+  text-align: center;
   background: #e1e1e1; }
+  .learn-more h2 {
+    margin-bottom: 30px; }
+  .learn-more h3 {
+    margin-bottom: 120px; }
+  .learn-more h4 {
+    max-width: 640px;
+    margin: 0 auto 30px auto; }
+  .learn-more h5 {
+    margin-bottom: 40px; }
+  .learn-more .tab-menu {
+    margin-bottom: 130px; }
+  .learn-more .grid-container {
+    margin-bottom: 150px; }
+  .learn-more form .grid-container {
+    margin-bottom: 40px; }
+  .learn-more .btn-submit {
+    margin-top: 40px; }
+
+.grid-container {
+  display: grid;
+  grid-column-gap: 30px;
+  grid-row-gap: 40px; }
+
+.grid-container-4 {
+  grid-column-gap: 30px;
+  grid-row-gap: 150px;
+  grid-template-columns: auto auto auto auto; }
+  @media (max-width: 991.98px) {
+    .grid-container-4 {
+      grid-template-columns: auto auto auto; } }
+  @media (max-width: 767.98px) {
+    .grid-container-4 {
+      grid-template-columns: auto auto; } }
+  @media (max-width: 575.98px) {
+    .grid-container-4 {
+      grid-template-columns: auto; } }
+
+.grid-container-2 {
+  grid-row-gap: 40px;
+  grid-template-columns: auto auto;
+  margin: 0 auto; }
+  @media (max-width: 767.98px) {
+    .grid-container-2 {
+      grid-template-columns: auto; } }
+
+.grid-item img {
+  max-width: 240px; }
+
+form {
+  padding: 15px; }
+  form .grid-container-2 {
+    max-width: 860px;
+    text-align: left; }
+
+.form-group {
+  position: relative; }
+
+.form-label {
+  display: block;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 600;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  -webkit-appearance: none; }
+  .required .form-label:before {
+    content: '*';
+    display: inline-block;
+    margin-right: 10px; }
+
+.form-control {
+  display: block;
+  width: calc(100% - 30px);
+  padding: 20px 15px 10px 15px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 3px;
+  text-transform: none;
+  -webkit-appearance: none;
+  border: none;
+  background: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  outline: none !important;
+  border-bottom: 2px solid #28292b; }
+  .form-control[type="checkbox"] {
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    padding: 0;
+    border: 2px solid #28292b;
+    margin-right: 20px; }
+    .form-control[type="checkbox"]:checked:before {
+      content: '\67';
+      font-family: 'campagnolo12speed';
+      font-size: 14px;
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translateX(-50%) translateY(-50%);
+              transform: translateX(-50%) translateY(-50%); }
+
+.form-group-multiple {
+  position: relative; }
+  .form-group-multiple .form-control {
+    pointer-events: none;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+  .form-group-multiple .icon-arrow-down {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    font-size: 25px; }
+  .form-group-multiple .nav-container {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    z-index: 99;
+    opacity: 0;
+    pointer-events: none;
+    background: #ffffff;
+    -webkit-box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.25);
+    -webkit-transition: all ease-in-out 350ms;
+    transition: all ease-in-out 350ms; }
+  .form-group-multiple.active .nav-container {
+    opacity: 1;
+    pointer-events: all; }
+
+.nav-multiple {
+  list-style: none;
+  display: block;
+  position: relative;
+  margin: 0;
+  padding: 0; }
+  .nav-multiple > li {
+    padding: 10px;
+    vertical-align: middle;
+    -webkit-transition: all ease-in-out 350ms;
+    transition: all ease-in-out 350ms; }
+    .nav-multiple > li .icon-check {
+      vertical-align: middle;
+      margin-right: 10px;
+      opacity: 0;
+      -webkit-transition: all ease-in-out 350ms;
+      transition: all ease-in-out 350ms; }
+    .nav-multiple > li:hover, .nav-multiple > li.active {
+      background: #e1e1e1; }
+    .nav-multiple > li.active .icon-check {
+      opacity: 1; }
+
+.form-group-checkbox .form-label {
+  display: inline-block;
+  vertical-align: middle;
+  color: #aaabb1;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 3px;
+  text-transform: none;
+  -webkit-appearance: none; }
+
+::-webkit-input-placeholder {
+  color: #aaabb1;
+  opacity: 1; }
+
+:-ms-input-placeholder {
+  color: #aaabb1;
+  opacity: 1; }
+
+::-ms-input-placeholder {
+  color: #aaabb1;
+  opacity: 1; }
+
+::placeholder {
+  color: #aaabb1;
+  opacity: 1; }
+
+:-ms-input-placeholder {
+  color: #aaabb1; }
+
+::-ms-input-placeholder {
+  color: #aaabb1; }
 
 /*
 body {	
