--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -8,3 +8,38 @@ body {
 .red {
     color: $red;
 }
+
+h2 {
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin: 0 0 20px 0;
+}
+
+h3 {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin: 0 0 20px 0;
+}
+
+h4 {
+    font-size: 24px;
+    font-weight: 400px;
+    line-height: 36px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin: 0 0 20px 0;
+}
+
+h5 {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin: 0 0 20px 0;
+}
