--- a/src/scss/sections/_specs.scss
+++ b/src/scss/sections/_specs.scss
@@ -69,7 +69,7 @@
     .flex-row+.flex-foot {
         border-top: 0;
     }
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         .flex-col-2 {
             display: none;
         }
