--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -8,6 +8,14 @@ footer {
     min-height: 80px;
     color: #aaabb1;
     border-top: 1px solid #aaabb1;
+    @include media-breakpoint-down(md) {
+        .flex-row {
+            flex-direction: column;
+            .flex {
+                margin: 10px auto;
+            }
+        }
+    }
 }
 
 .nav-footer {
