--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -43,3 +43,22 @@ h5 {
     text-transform: uppercase;
     margin: 0 0 20px 0;
 }
+
+@include media-breakpoint-down(sm) {
+    h2 {
+        font-size: 30px;
+        line-height: 30px;
+    }
+    h3 {
+        font-size: 12px;
+        line-height: 17px;
+    }
+    h4 {
+        font-size: 12px;
+        line-height: 15px;
+    }
+    h5 {
+        font-size: 12px;
+        line-height: 17px;
+    }
+}
