--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -12,15 +12,34 @@ header {
     &>svg {
         width: 245px;
     }
+    @include media-breakpoint-down(md) {
+        &>img,
+        &>svg {
+            width: 130px;
+        }
+    }
+}
+
+.tab-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: inline-flex;
+    li+li {
+        margin-left: 10px;
+    }
 }
 
 .nav-main {
-    margin-top: 60px;
+    padding-top: 60px;
     transform: translateY(0);
     transition: all 350ms ease-in-out;
     .submenu & {
         pointer-events: none;
         transform: translateY(-100%);
+    }
+    @include media-breakpoint-down(sm) {
+        padding-top: 15px;
     }
 }
 
@@ -29,7 +48,7 @@ header {
     top: 0;
     background: $black;
     color: $white;
-    overflow: hidden;
+    overflow: visible;
     pointer-events: none; // box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.25);
     border-bottom: 1px solid darken($black, 10%);
     transform: translateY(-100%);
@@ -46,14 +65,49 @@ header {
         pointer-events: all;
         transform: translateY(0);
     }
-}
-
-.tab-menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: inline-flex;
-    li+li {
-        margin-left: 10px;
+    @include media-breakpoint-down(md) {
+        .flex-row {
+            .flex-left,
+            .flex-right {
+                flex: 1 1 155px;
+            }
+            .flex-center {
+                flex: 1 1 40px;
+            }
+        }
+        .campagnolo {
+            &>img,
+            &>svg {
+                width: 140px;
+            }
+        }
+        .btn-more {
+            margin: 13px 0;
+        }
+        .tab-menu {
+            display: block;
+            position: absolute;
+            top: 100%;
+            width: 100%;
+            left: 0;
+            background: white;
+            color: black;
+            overflow: hidden;
+            max-height: 0;
+            pointer-events: none;
+            transition: all ease-in-out 600ms;
+            li+li {
+                margin-left: 0;
+            }
+            li:nth-child(2) {
+                margin-bottom: 25px;
+            }
+        }
+        .submenu.submenu-active & {
+            .tab-menu {
+                max-height: 100vh;
+                pointer-events: all;
+            }
+        }
     }
 }
