--- a/src/scss/sections/_overview.scss
+++ b/src/scss/sections/_overview.scss
@@ -37,11 +37,12 @@
     .speed-12 {
         position: relative;
         width: 880px;
-        max-width: calc(100vw - 30px);
+        max-width: calc(100vw - 160px);
         margin: 0 auto;
         margin-top: 20vh;
-        &.sm-down {
-            width: 240px;
+        &.hidden-md-up {
+            width: 600px;
+            max-width: calc(100vw - 140px);
         }
     }
     .numbers {
@@ -150,7 +151,6 @@ $caption-background: $white;
 $caption: $black;
 .captions-item {
     position: absolute;
-    padding: 10vw;
     top: 50%;
     transform: translateY(-50%);
     pointer-events: none;
@@ -158,8 +158,7 @@ $caption: $black;
     transition: all ease-in-out 350ms;
     background: rgba(255, 255, 255, 0.8);
     margin: 0 5vw;
-    padding: 30px 35px; // display: block;
-    // width: calc(100% - 20vw);
+    padding: 30px 35px;
     &:before {
         content: '';
         display: block;
@@ -167,14 +166,12 @@ $caption: $black;
         width: 200vw;
         height: 200vh;
         top: -50vh;
-        left: -50vw; // background: rgba($caption-background, 0.2);
+        left: -50vw;
     }
     &>div {
         transform: translateY(0);
     }
     .index {
-        // display: inline;
-        // background: $caption-background;
         color: $caption;
         text-transform: uppercase;
         .red {
@@ -182,17 +179,17 @@ $caption: $black;
         }
     }
     .title {
-        // display: inline;
-        font-size: 70px;
-        font-weight: 700;
-        font-family: 'Oswald', sans-serif;
-        text-transform: uppercase; // background: $caption-background;
+        font-size: 60px;
+        line-height: 60px;
+        font-weight: 800;
+        margin: 15px 0 10px 0;
+        text-indent: -4px;
+        text-transform: uppercase;
         color: $caption;
     }
     .description {
-        // display: inline;
         text-transform: uppercase;
-        max-width: 390px; // background: $caption-background;
+        max-width: 390px;
         color: $caption;
     }
     &.entering {
@@ -209,6 +206,24 @@ $caption: $black;
             @include exitingTop();
         }
         @include stagger('& > div');
+    }
+    @include media-breakpoint-down(sm) {
+        top: auto;
+        bottom: -10px;
+        margin: 0;
+        padding: 15px;
+        .index {
+            display: none;
+        }
+        .title {
+            font-size: 36px;
+            line-height: 36px;
+            text-indent: 0;
+        }
+        .description {
+            font-size: 14px;
+            line-height: 18px;
+        }
     }
 }
 
