--- a/src/scss/sections/_specs.scss
+++ b/src/scss/sections/_specs.scss
@@ -24,6 +24,7 @@
         margin-bottom: 40px;
     }
     .grid-container-2 {
+        grid-template-columns: 55% 43%;
         @include media-breakpoint-down(lg) {
             grid-template-columns: auto;
         }
@@ -33,9 +34,33 @@
             max-width: 100%;
         }
     }
+    .type {
+        font-size: 14px;
+        font-weight: 300;
+        letter-spacing: 2px;
+        color: $white;
+        margin-bottom: 10px;
+        .rim,
+        .disc {
+            font-weight: 600;
+            color: #aaabb0;
+        }
+    }
     .super-record {
         img {
             max-width: 100%;
+        }
+    }
+    @include media-breakpoint-down(sm) {
+        padding: 55px 0;
+        h2 {
+            margin-bottom: 20px;
+        }
+        h3 {
+            margin-bottom: 20px;
+        }
+        h5 {
+            margin-bottom: 20px;
         }
     }
 }
